# jcc

./: .gitignore  BNF.md  CMakeLists.txt  LICENSE.md  README.md  a.cpp  build.sh  jcc  lazy-cc.py  make-release.sh  nested-struct.cpp  out copy.cpp  out.cpp  out.json  test-code.cpp
designs/: Untitled Diagram.drawio
designs/lang/0/: lex-test.test  storage.cdl  storage.cdl.cpp
designs/lang/1/: basic.j.cpp  basic2.j.cpp
designs/lang/ideas/: advanced.j
designs/lang/test/: expression.cpp  expression.j
langdev/ideas/: driver.j  metacode.j  more stuff.j  program.j  properties.j  reflect.j
langdev/j/: comments.j  enum.j  struct.j
libjcc/: CMakeLists.txt
libjcc/include/: compile.hpp  jcc.h  lexer.hpp  node.hpp  parser.hpp  sha256.h  sha256.hpp
libjcc/private/: lexer.hpp  parser.hpp  preprocessor.hpp
libjcc/source/: compile.cpp  generator.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  sha256.c  sha256.cpp
libjcc/test/: compile-sppedtest.cpp  lexer-speedtest.cpp  parser.py  tree.cpp
main/: CMakeLists.txt
main/source/: main.cpp
old/: out.cpp  out.json  out.yaml
src/: CMakeLists.txt  compiler.go
src/include/: compile.hpp  lexer.hpp
src/source/: compile.cpp  lexer.cpp  main.cpp
tests/: complex-struct.j  complex-struct.j.ast.json  complex-struct.j.lex.json  declare_constants.j  func-declare.j  function_return_10.j  global-assignment.j  global-assignment.j.lex.json  global-declare.j  linker_a.j  linker_b.j  nested-struct.j  nested-struct.j.ast.json  nested-struct.j.lex.json
tools/: visualize-ast.py
transpiler/src/: CMakeLists.txt
transpiler/src/source/: compiler.go
